--- a/FrontEnd/src/pages/Landing/Landing.css
+++ b/FrontEnd/src/pages/Landing/Landing.css
@@ -6,7 +6,7 @@
   width: 100%;
   background: linear-gradient(to right, #2d2d3f, #4f4fcf);
   color: white;
-  overflow: hidden;
+  overflow: auto;
   position: fixed;
   top: 0;
   left: 0;
